guestbook/geustbook-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
    - host: guestbook.k3s.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  name: http
